[package]
name = "ductape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.7"
indicatif = "0.17.8"
opentelemetry-otlp = { version = "0.15.0", features = ["reqwest-blocking-client", "http-proto"], optional = true }
opentelemetry_sdk = { version = "0.22.1", optional = true }
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-opentelemetry = { version = "0.23.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rayon = "1.10.0"

[features]
opentelemetry = [ "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry" ]
